--- a/css/normalize.css
+++ b/css/normalize.css
@@ -251,4 +251,7 @@ Interactive
 /*
 Add the correct display in Chrome and Safari.
 */
+summary {
+  display: list-item;
+}
 /*# sourceMappingURL=normalize.css.map */
