--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,147 +1,11 @@
-@import './vars';
-body {
-    $font-family: Roboto, sans-serif;
-    font-family: $font-family;
-    letter-spacing: $letter-spacing;
-}
-
-:root {
-    --primary-white-color: $--primary-white-color;
-    --primary-color: $--primary-color;
-    --accent-color: $--accent-color;
-    --text-title: $--text-title;
-    --timing-function: $--timing-function;
-    --svg-color: $--svg-color;
-}
-
-.break {
-    margin: $margin;
-    padding: $padding;
-    list-style: $list-style;
-    text-decoration: $text-decoration;
-}
-
-.linked {
-    $font-family: inherit;
-    display: $display;
-    font-family: $font-family;
-    text-decoration: $text-decoration;
-    cursor: $cursor;
-}
-
-
-/*Header*/
-
-.unit:hover .link-header-font,
-.unit:focus .link-header-font {
-    color: $--accent-color;
-}
-
-.unit:not(:last-child) {
-    margin-right: 30px;
-}
-
-$fill: currentColor;
-.mark {
-    fill: $fill;
-    margin-right: 10px;
-}
-
-.logo-lin {
-    color: $--text-title;
-    $font-family: raleway, sans-serif;
-    font-family: $font-family;
-    $font-weight: 700;
-    font-weight: $font-weight;
-    $lineheight: 1.19;
-    line-height: $lineheight;
-    $font-size: 26px;
-    font-size: $font-size;
-    letter-spacing: $letter-spacing;
-    text-decoration: $text-decoration;
-}
-
-.logo-lin>span {
-    color: $--accent-color;
-}
-
-.link-header-font {
-    bottom: $bottom;
-    $font-weight: 500;
-    font-weight: $font-weight;
-    $font-size: 14px;
-    font-size: $font-size;
-    letter-spacing: $letter-spacing;
-    text-decoration: $text-decoration;
-    cursor: $cursor;
-}
-
-.header {
-    display: $display;
-    align-items: $align-items;
-    &-nav {
-        display: $display;
-        align-items: $align-items;
-    }
-}
-
-.site-nav {
-    list-style: $list-style;
-    text-decoration: $text-decoration;
-    display: $display;
-    $margin-left: 85px;
-    margin-left: $margin-left;
-    padding-left: $padding-left;
-    margin-top: $margin-top;
-    margin-bottom: $margin-bottom;
-    &>.item+.item {
-        $margin-left: 50px;
-        margin-left: $margin-left;
-    }
-    & .link-header-font {
-        $display: block;
-        display: $display;
-        padding-top: 32px;
-        padding-bottom: 32px;
-        color: $--tital-color;
-        transition: $transition;
-    }
-    & .current {
-        color: $--accent-color;
-        $position: relative;
-        position: $position;
-    }
-    & .current::after {
-        content: $content;
-        $position: absolute;
-        position: $position;
-        bottom: $bottom;
-        right: $right;
-        $display: block;
-        display: $display;
-        width: $width;
-        height: 4px;
-        background: $--accent-color;
-        border-radius: 2px;
-    }
-    & .link-header-font:hover,
-    & .link-header-font:focus {
-        color: $--accent-color;
-    }
-}
-
-.auth-nav {
-    $display: inline-flex;
-    aling-items: $align-items;
-    $margin-left: auto;
-    margin-left: $margin-left;
-    & .link-header-font {
-        display: block;
-        padding-top: 32px;
-        padding-bottom: 32px;
-        transition: $transition;
-    }
-    &>.item+.item {
-        margin-left: 30px;
-    }
-}
+@import './utils/vars';
+@import './components/header';
+@import './components/hero';
+@import './components/contacts';
+@import './components/doing';
+@import './components/team';
+@import './components/clients';
+@import './components/button';
+@import './components/projects';
+@import './components/footer';
+@import './components/portfolio';
