--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@import './utils/vars';
+@import './utils/variables';
 @import './components/header';
 @import './components/hero';
 @import './components/contacts';
