--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -11,7 +11,7 @@
 .contact a {
     list-style: none;
     text-decoration: none;
-    color: var(--primary-color);
+    color: $--primary-color;
     margin-top: 32px;
     margin-bottom: 32px;
 }
