--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -6,7 +6,7 @@
     line-height: 1.1;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #ffffff;
+    color: $--primary-color;
     padding-bottom: 21px;
 }
 
@@ -22,7 +22,7 @@
     font-size: 22px;
     line-height: 1.2;
     letter-spacing: 0.03em;
-    color: #2196f3;
+    color: $--accent-color;
 }
 
 .footer {
@@ -43,11 +43,11 @@
     font-size: 22px;
     line-height: 1.2;
     letter-spacing: 0.03em;
-    color: #ffffff;
+    color: $--primary-white-color;
 }
 
 .studio-logo {
-    color: white;
+    color: $--primary-white-color;
 }
 
 .footer-contacts {
@@ -62,7 +62,7 @@
 
 .footer-contacts:hover,
 .footer-contacts:focus {
-    color: var(--accent-color);
+    color: $--accent-color;
 }
 
 .container .title {
@@ -85,7 +85,7 @@
     line-height: 1.7;
     /* or 171% */
     letter-spacing: 0.03em;
-    color: #ffffff;
+    color: $--primary-white-color;
 }
 
 .footer-links {
@@ -94,7 +94,7 @@
 
 .footer-links a:hover,
 .footer-links a:focus {
-    color: var(--accent-color);
+    color: $--accent-color;
 }
 
 .join-us .footer-links {
@@ -119,19 +119,19 @@
     height: 44px;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
-    transition: background-color 250ms var(--timing-function);
+    transition: background-color 250ms $--timing-function;
 }
 
 .link-id:hover {
     width: 44px;
     height: 44px;
     border-radius: 50%;
-    background-color: var(--accent-color);
+    background-color: $--accent-color;
 }
 
 .link-id:active,
 .link-id:focus {
-    background-color: var(--accent-color);
+    background-color: $--accent-color;
 }
 
 .address,
@@ -144,11 +144,11 @@
     line-height: 1.7;
     /* or 171% */
     letter-spacing: 0.03em;
-    color: #ffffff;
+    color: $--primary-white-color;
 }
 
 .decorate {
-    color: var(--accent-color);
+    color: $--accent-color;
     font-family: raleway, sans-serif;
     font-weight: 700;
     font-size: 22px;
@@ -203,7 +203,7 @@
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
-    color: var(--primary-white-color);
+    color: $--primary-white-color;
 }
 
 .form-footer {
@@ -232,8 +232,8 @@
     background: #2196f3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    border: var(--accent-color);
-    color: var(--primary-white-color);
+    border: $--accent-color;
+    color: $--primary-white-color;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
@@ -244,7 +244,7 @@
 
 .icon-send {
     position: absolute;
-    fill: var(--primary-white-color);
+    fill: $--primary-white-color;
     top: 50%;
     transform: translateY(-50%);
     right: 28px;
