--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -2,8 +2,8 @@
     margin: 0;
     font-family: roboto, sans-serif;
     letter-spacing: 0.03em;
-    color: $title-color;
-    background-color: $primary-white-color;
+    color: $--title-color;
+    background-color: $--primary-white-color;
 }
 
 %linked {
