--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -11,8 +11,8 @@
     text-align: center;
     letter-spacing: 0.06em;
     color: white;
-    border-color: var(--accent-color);
-    background: var(--accent-color);
+    border-color: $--accent-color;
+    background: $--accent-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: 0;
@@ -26,9 +26,9 @@
     min-width: 200px;
     text-align: center;
     min-height: 50px;
-    background-color: var(--accent-color);
+    background-color: $--accent-color;
     border-color: transparent;
-    color: white;
+    color: $--primary-white-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     text-decoration: none;
     font-weight: 700;
@@ -48,9 +48,9 @@
     padding-left: 29px;
     width: 200px;
     min-height: 50px;
-    background-color: #2196f3;
+    background-color: $--accent-color;
     border-color: transparent;
-    color: white;
+    color: $--primary-white-color;
     margin-bottom: 56px;
     cursor: pointer;
 }
@@ -71,18 +71,18 @@
     line-height: 1.6;
     text-align: center;
     letter-spacing: 0.03em;
-    color: #212121;
+    color: $--text-title;
     background-color: #f5f4fa;
     border-color: transparent;
     border-radius: 4px;
     transition-property: all;
     transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-timing-function: $--timing-function;
 }
 
 .button-list:hover,
 .button-list:focus {
     color: white;
-    background: var(--accent-color);
+    background: $--accent-color;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
 }
