--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -18,7 +18,7 @@
     visibility: visible;
     opacity: 1;
     background: rgba(0, 0, 0, 0.2);
-    transition: opacity 250ms var(--timing-function);
+    transition: opacity 250ms $--timing-function;
 }
 
 .backdrop.is-hidden {
@@ -41,7 +41,7 @@
     background: white;
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
-    transition: transform 250ms var(--timing-function);
+    transition: transform 250ms $--timing-function;
 }
 
 .form {
@@ -56,7 +56,7 @@
     transform: translateY(-50%);
     left: 16px;
     margin-right: 8px;
-    transition: fill 250ms var(--timing-function);
+    transition: fill 250ms $--timing-function;
 }
 
 .form-title {
@@ -75,15 +75,15 @@
     cursor: pointer;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    transition: border-color 250ms var(--timing-function);
+    transition: border-color 250ms $--timing-function;
 }
 
 .form-field:focus-within>.form-icon {
-    color: var(--accent-color);
+    color: $--accent-color;
 }
 
 .form-input:focus~.form-label {
-    color: var(--accent-color);
+    color: $--accent-color;
 }
 
 .form-input:focus+.form-label,
@@ -92,17 +92,17 @@
 }
 
 .form-input:placeholder-shown {
-    background-color: white;
+    background-color: $--primary-white-color;
 }
 
 .form-input:focus~.form-icon,
 .form-input:not(:placeholder-shown)~.form-icon {
-    fill: var(--accent-color);
+    fill: $--accent-color;
 }
 
 .form-input:focus,
 .form-input:not(:placeholder-shown) {
-    border-color: var(--accent-color);
+    border-color: $--accent-color;
     outline: none;
 }
 
@@ -116,7 +116,7 @@
     top: 50%;
     left: 42px;
     transform: translateY(-50%);
-    color: #757575;
+    color: $--primary-color;
     transition: transform 250ms linear;
 }
 
@@ -128,7 +128,7 @@
     white-space: nowrap;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    transition: border-color 250ms var(--timing-function);
+    transition: border-color 250ms $--timing-function;
 }
 
 .form-textarea {
@@ -139,18 +139,18 @@
     line-height: 1.14;
     letter-spacing: 0.01em;
     color: #757575;
-    transition: transform 250ms var(--timing-function);
+    transition: transform 250ms $--timing-function;
 }
 
 .form-coment:focus+.form-textarea,
 .form-coment:not(:placeholder-shown)+.form-textarea {
     transform: translateY(-35px);
-    color: var(--accent-color);
+    color: $--accent-color;
 }
 
 .form-coment:focus,
 .form-coment:not(:placeholder-shown) {
-    border-color: var(--accent-color);
+    border-color: $--accent-color;
     outline: none;
 }
 
@@ -165,9 +165,9 @@
     line-height: 1.87;
     text-align: center;
     letter-spacing: 0.06em;
-    color: #ffffff;
-    border-color: var(--accent-color);
-    background: var(--accent-color);
+    color: $--primary-white-color;
+    border-color: $--accent-color;
+    background: $--accent-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: 0;
@@ -182,7 +182,7 @@
     padding: 0;
     border: 0;
     border-radius: 50%;
-    background-color: #ffffff;
+    background-color: $--primary-white-color;
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
     cursor: pointer;
 }
@@ -204,7 +204,7 @@
     font-size: 14px;
     line-height: 1.71;
     align-items: center;
-    color: var(--primary-color);
+    color: $--primary-color;
     cursor: pointer;
 }
 
@@ -215,8 +215,8 @@
     border-radius: 2px;
     margin-right: 8px;
     border: 2px solid black;
-    background-color: var(--primary-white-color);
-    transition: 250ms var(--timing-function);
+    background-color: $--primary-white-color;
+    transition: 250ms $--timing-function;
 }
 
 .input-checkbox {
@@ -233,15 +233,15 @@
 .linked.terms {
     display: block;
     margin-left: 5px;
-    color: var(--accent-color);
+    color: $--accent-color;
     text-decoration: underline;
     text-align: right;
 }
 
 .input-checkbox:checked+.icon-checkbox {
-    background-color: var(--accent-color);
+    background-color: $--accent-color;
     background-image: url(../images/iconcheck.svg);
     background-size: cover;
     border-radius: 2px;
-    border-color: var(--accent-color);
+    border-color: $--accent-color;
 }
