--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -6,7 +6,7 @@
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: var(--text-title);
+    color: $--text-title;
 }
 
 .text-button {
@@ -16,7 +16,7 @@
     font-size: 16px;
     line-height: 1.9;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: $--primary-color;
 }
 
 .text-title {
@@ -26,7 +26,7 @@
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
-    color: #212121;
+    color: $--text-title;
 }
 
 .text {
@@ -34,5 +34,5 @@
     font-size: 18px;
     line-height: 1.6;
     letter-spacing: 0.03em;
-    color: #ffffff;
+    color: $--primary-white-color;
 }
