--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
 @import './utils/variables';
-@import './components/portfolio';
+@import './utils/placeholders';
 @import './components/header';
 @import './components/hero';
 @import './components/contacts';
@@ -9,3 +9,4 @@
 @import './components/button';
 @import './components/projects';
 @import './components/footer';
+@import './components/portfolio';
