--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -1,11 +1,3 @@
-%body {
-    margin: 0;
-    font-family: roboto, sans-serif;
-    letter-spacing: 0.03em;
-    color: $--title-color;
-    background-color: $--primary-white-color;
-}
-
 %linked {
     display: block;
     font-family: $font-family;
@@ -14,15 +6,10 @@
 }
 
 %break {
-    padding-left: 0;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0;
+    padding: 0;
     list-style: none;
-}
-
-%section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    text-decoration: none;
 }
 
 %container {
