--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -4,6 +4,7 @@
 }
 
 .detail {
+    @extend %break;
     display: flex;
     justify-content: center;
     padding-top: 93px;
@@ -15,6 +16,7 @@
 }
 
 .container-flex {
+    @extend %break;
     display: flex;
     flex-wrap: wrap;
 }
