--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -91,6 +91,7 @@
 }
 
 .com {
+    @extend %break;
     display: flex;
 }
 
@@ -165,6 +166,7 @@
 }
 
 .link {
+    @extend %break;
     display: flex;
     justify-content: center;
     margin-bottom: 24px;
